# morph-browser

./: .bzrignore  .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README  README.md  clickable-qt-5.12.json  clickable.json  cmake_uninstall.cmake.in  common.pri  kalossi-browser.pro  make-snap.sh  snapcraft.yaml  ubuntu-browser.qmlproject  webbrowser-app.qmlproject
click-hooks/: CMakeLists.txt  hook-utils.cpp  hook-utils.h  hook.cpp  webapp-container.hook.in
doc/: CMakeLists.txt  SharedWebContext.qdoc  WebContext.qdoc  WebView.qdoc  morph-web.qdoc  morph-web.qdocconf  ubuntu-web.qdoc  ubuntu-web.qdocconf
doc/css/: custom.css  qtquick.css
po/: CMakeLists.txt  aa.po  am.po  ar.po  ast.po  az.po  be.po  bg.po  bn.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gd.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  ia.po  id.po  is.po  it.po  (+46 more)
src/: Browser.qml  CMakeLists.txt  Chrome.qml  commandline-parser.cpp  commandline-parser.h  config.h.in  history-matches-model.cpp  history-matches-model.h  history-model.cpp  history-model.h  kalossi-browser.cpp  kalossi-browser.qmlproject  main.cpp  src.pro  test.qml  ubuntu-browser.cpp  ubuntu-browser.desktop  ubuntu-browser.h  webbrowser-app.cpp  webbrowser-app.desktop  webbrowser-app.desktop.in  webbrowser-app.h
src/Morph/: CMakeLists.txt
src/Morph/Web/: CMakeLists.txt  ItemSelector02.qml  MorphSelectOverrideDialog.qml  MorphSharedWebContext.qml  MorphWebContext.qml  MorphWebView.qml  SelectOverrideDialog.qml  UserAgent02.qml  fb-no-appbanner.js  plugin.cpp  plugin.h  qmldir  scrollbar-theme.js  select_overrides.js  twitter-no-omniprompt.js  ua-overrides-desktop.js.in
src/Ubuntu/: CMakeLists.txt  chromium-version.qml
src/Ubuntu/Browser/: ActivityView.qml  AddressBar.qml  Browser.qml  CMakeLists.txt  Chrome.qml  ChromeButton.qml  EmbeddedProgressBar.qml  ErrorSheet.qml  HistoryView.qml  ItemSelector.qml  KeyboardRectangle.qml  PageDelegate.qml  RevealingBar.qml  Selection.qml  SelectionHandle.qml  SelectionPopover.qml  Suggestions.qml  TabsList.qml  UbuntuWebView.qml  history-hostlist-model.h  history-matches-model.cpp  history-matches-model.h  history-model.cpp  hyperlinks.js  plugin.cpp  plugin.h  qmldir  selection.js  tabs-model.cpp  tabs-model.h  webbrowser-app.qml  webview-thumbnailer.cpp
src/Ubuntu/Components/: CMakeLists.txt
src/Ubuntu/Web/: CMakeLists.txt  ItemSelector02.qml  PopoverCustom.qml  Selection.qml  SelectionHandle.qml  UbuntuSharedWebContext.qml  UbuntuWebContext.qml  UbuntuWebView02.qml  UserAgent02.qml  favicon-image-provider.cpp  favicon-image-provider.h  fb-no-appbanner.js  plugin.cpp  qmldir  selection02.js  smartbanners.js  twitter-no-omniprompt.js  ua-override-worker.js  ua-overrides-desktop.js  ua-overrides-desktop.js.in  ua-overrides-mobile.js  ua-overrides-mobile.js.in
src/app/: ActiveDownloadsSingleton.qml  ActivityView.qml  AddressBar.qml  AddressBarDialog.qml  AlertDialog.qml  AlertDialog.qmlc  AllowCustomSchemesDialog.qml  AllowOrBlockDomainDialog.qml  AuthenticationDialog.qml  BasicAuthenticationDialog.qml  BeforeUnloadDialog.qml  BeforeUnloadDialog.qmlc  BookmarksView.qml  Browser.qml  BrowserHeader.qml  BrowserPage.qml  BrowserView.qml  BrowserView.qmlc  BrowserWindow.qml  BrowserWindow.qmlc  CMakeLists.txt  CertificateVerificationDialog.qml  Chrome.qml  ChromeBase.qml  ChromeBase.qmlc  ChromeButton.qml  ChromeButton.qmlc  ChromeController.qml  ChromeController.qmlc  ChromeStateTracker.qml  ChromeStateTracker.qmlc  ColorSelectDialog.qml  ConfirmDialog.qml  ConfirmDialog.qmlc  ContentDownloadDialog.qml  ContentExportDialog.qml  ContentHandler.qml  ContentHandler.qmlc  ContentPickerDialog.qml  ContentShareDialog.qml  (+114 more)
src/app/actions/: Back.qml  Back.qmlc  Bookmark.qml  Bookmark.qmlc  BookmarkLink.qml  BookmarkLink.qmlc  ClearHistory.qml  ClearHistory.qmlc  Copy.qml  Copy.qmlc  CopyImage.qml  CopyImage.qmlc  CopyLink.qml  CopyLink.qmlc  Cut.qml  Cut.qmlc  Erase.qml  Erase.qmlc  FindInPage.qml  FindInPage.qmlc  Forward.qml  Forward.qmlc  GoTo.qml  GoTo.qmlc  NewTab.qml  NewTab.qmlc  OpenImageInNewTab.qml  OpenImageInNewTab.qmlc  OpenLinkInBrowser.qml  OpenLinkInNewBackgroundTab.qml  OpenLinkInNewBackgroundTab.qmlc  OpenLinkInNewPrivateWindow.qml  OpenLinkInNewTab.qml  OpenLinkInNewTab.qmlc  OpenLinkInNewWindow.qml  OpenLinkInNewWindow.qmlc  OpenLinkInPrivateWindow.qml  OpenLinkInPrivateWindow.qmlc  OpenLinkInWebBrowser.qml  OpenVideoInNewTab.qml  (+20 more)
src/app/pushclient/: pushclient.cpp  pushclient.h
src/app/unity8/: CMakeLists.txt  README
src/app/userscripts/: select_overrides.js
src/app/webbrowser/: ActiveDownloadsSingleton.qml  ActivityView.qml  AddressBar.qml  AddressBar.qmlc  BookmarkOptions.qml  BookmarkOptionsDialog.qml  BookmarksFolderDelegate.qml  BookmarksFolderListView.qml  BookmarksFolderListViewWide.qml  BookmarksFoldersView.qml  BookmarksFoldersView.qmlc  BookmarksFoldersViewWide.qml  BookmarksFoldersViewWide.qmlc  BookmarksList.qml  BookmarksListSheet.qml  BookmarksModel.qml  BookmarksModelUtils.js  BookmarksModelUtils.jsc  BookmarksView.qml  BookmarksViewWide.qml  BookmarksViewWide.qmlc  BottomEdgeHandle.qml  BottomEdgeHandle.qmlc  Browser.qml  Browser.qmlc  BrowserPage.qml  BrowserPage.qmlc  BrowserPageHeader.qml  BrowserTab.qml  BrowserTab.qmlc  CMakeLists.txt  Chrome.qml  Chrome.qmlc  ContentDownloadDialog.qml  ContentDownloadDialog.qmlc  ContentHandler.qml  ContentPickerDialog.qml  ContentPickerDialog.qmlc  ContextMenuMobile.qml  ContextMenuMobile.qmlc  (+191 more)
src/app/webcontainer/: AccountChooserDialog.qml  AccountErrorScreen.qml  AccountItem.qml  AccountItemView.qml  AccountsLogic.qml  AccountsLogin.qml  AccountsLoginPage.qml  AccountsModel.qml  AccountsPage.qml  AccountsSplashScreen.qml  AccountsView.qml  CMakeLists.txt  (+59 more)
tests/autopilot/: CMakeLists.txt
tests/unittests/: CMakeLists.txt  tst_AddressBar.qml  tst_Chrome.qml  tst_CommandLineParserTests.cpp  tst_HistoryMatchesModelTests.cpp  tst_HistoryModelTests.cpp  tst_QmlTests.cpp  tst_TabsModelTests.cpp
(+368 files in other folders)
