add_subdirectory(sanity)
add_subdirectory(qml)
add_subdirectory(domain-utils)
add_subdirectory(history-model)
add_subdirectory(history-timeframe-model)
add_subdirectory(history-domain-model)
add_subdirectory(history-domainlist-model)
add_subdirectory(history-domainlist-chronological-model)
add_subdirectory(top-sites-model)
add_subdirectory(session-utils)
add_subdirectory(suggestions-filter-model)
add_subdirectory(tabs-model)
add_subdirectory(bookmarks-model)
add_subdirectory(bookmarks-folder-model)
add_subdirectory(bookmarks-folderlist-model)
add_subdirectory(bookmarks-folderlist-chronological-model)
add_subdirectory(limit-proxy-model)
add_subdirectory(container-url-patterns)
add_subdirectory(cookie-store)
add_subdirectory(oxide-cookie-helper)
add_subdirectory(session-storage)
add_subdirectory(favicon-fetcher)
add_subdirectory(webapp-container-hook)
add_subdirectory(intent-filter)
add_subdirectory(search-engine)
